<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/titlebackground"
        android:orientation="vertical"
        tools:context="com.example.bluetooth.MainActivity">


        <Space
                android:layout_width="match_parent"
                android:layout_height="42dp" />

        <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_mono_medium"
                android:text="@string/welcome_to_cpr_training"
                android:textAlignment="center"
                android:textColor="#8B6969"
                android:textSize="45sp"
                android:textStyle="bold" />

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="398dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/titlepng" />

        <Space
                android:layout_width="match_parent"
                android:layout_height="40dp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:orientation="horizontal">

                <Space
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <Button
                        android:id="@+id/contButton"
                        android:layout_width="256dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/button_border"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:text="@string/next"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="30sp" />

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

        </LinearLayout>

</LinearLayout>

