<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".MainActivity">

    <android.support.design.widget.BottomNavigationView android:id="@+id/bottom_navigation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@android:color/white"
            app:elevation="16dp"
            app:itemIconTint="@drawable/nav_item_color_state"
            app:itemTextColor="@drawable/nav_item_color_state"
            app:menu="@menu/bottom_navigation_main">

    </android.support.design.widget.BottomNavigationView>

    <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/bottom_navigation"
            android:layout_marginBottom="-56dp"
            android:background="#A4FFFFFF"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="52dp" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="66dp" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/recyclerView"
                        android:layout_width="match_parent"
                        android:layout_height="215dp"
                        android:paddingLeft="55dp" />
            </LinearLayout>

            <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/roboto_mono_medium"
                    android:text="Activ5 Bluetooth Pairing"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20dp" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <Button
                        android:id="@+id/connectButton"
                        android:layout_width="304dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/u_button"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:padding="8dp"
                        android:text="@string/connect"
                        android:textAllCaps="false"
                        android:textColor="#000000" />

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:orientation="horizontal">

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <Button
                        android:id="@+id/scanDevices"
                        android:layout_width="302dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/u_button"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:padding="8dp"
                        android:text="@string/scan_devices"
                        android:textAllCaps="false"
                        android:textColor="#000000" />

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="horizontal">

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                <Button
                        android:id="@+id/disconnectButton"
                        android:layout_width="258dp"
                        android:layout_height="40dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/u_button"
                        android:fontFamily="@font/roboto_mono_medium"
                        android:padding="8dp"
                        android:text="@string/disconnect"
                        android:textAllCaps="false"
                        android:textColor="#000000" />

                <Space
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

            </LinearLayout>

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="15dp" />

            <ProgressBar
                    android:id="@+id/progressBar2"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="match_parent"
                    android:layout_height="107dp" />

            <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

        </LinearLayout>

    </FrameLayout>

</RelativeLayout>
